<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context=".ui.detail.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_margin="10dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="225dp"
                android:layout_height="350dp"
                android:layout_margin="5dp"
                app:cardCornerRadius="15dp"
                app:cardElevation="5dp">

                <ImageView
                    android:id="@+id/img_movie"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/poster_film_spiderman"
                    android:contentDescription="@string/image_film" />


            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_name"
                style="@style/TextHome.Detail"
                android:layout_marginStart="8dp"
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@id/cardView"
                android:text="@string/nama_film" />

            <TextView
                android:id="@+id/tv_name_movie"
                style="@style/TextHome.Detail.Content"
                android:layout_below="@id/tv_name"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/cardView"
                android:text="@string/nama_film" />

            <TextView
                android:id="@+id/tv_date"
                style="@style/TextHome.Detail"
                android:layout_below="@+id/tv_name_movie"
                android:layout_marginStart="8dp"
                android:layout_marginTop="15dp"
                android:layout_toEndOf="@id/cardView"
                android:text="@string/tanggal_rilis" />

            <TextView
                android:id="@+id/tv_release_date"
                style="@style/TextHome.Detail.Content"
                android:layout_below="@id/tv_date"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/cardView"
                android:text="@string/tanggal_rilis" />

            <TextView
                android:id="@+id/tv_genre"
                style="@style/TextHome.Detail"
                android:layout_below="@+id/tv_release_date"
                android:layout_marginTop="15dp"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@id/cardView"
                android:text="@string/genre" />

            <TextView
                android:id="@+id/tv_genre_movie"
                style="@style/TextHome.Detail.Content"
                android:layout_below="@id/tv_genre"
                android:layout_marginStart="8dp"
                android:layout_toEndOf="@+id/cardView"
                android:text="@string/genre" />


        </RelativeLayout>

        <TextView
            style="@style/TextHome.Detail.Content"
            android:text="@string/sinopsis"
            android:layout_marginStart="12dp"/>
        <TextView
            android:id="@+id/tv_sinopsis"
            style="@style/TextHome.Detail"
            android:text="@string/sinopsis"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            />

        <TableLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp">

            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">

                <TextView
                    style="@style/TextHome.Detail.Content"
                    android:text="@string/pemain" />

                <TextView
                    android:id="@+id/tv_pemain"
                    style="@style/TextHome.Detail"
                    android:layout_marginStart="12dp"
                    android:layout_weight="1"
                    android:text="@string/pemain" />
            </TableRow>

        </TableLayout>
        <Button
            android:id="@+id/btn_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="8dp"
            android:text="@string/kunjungi_website"
            android:textAllCaps="false" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" />
    </LinearLayout>


</ScrollView>